# SKiES

./: CMakeLists.txt  Contributing.md  README  README.md
cmake/: Doxygen.cmake  skiesConfig.cmake.in
examples/: CMakeLists.txt  README  README.md
examples/Ag_not_ready/: README.md  epw.in  nscf.in  ph.in  pp.py  relax.in  scf.in
examples/Ag_ready/: README.md  crystal.fmt  epwdata.fmt  vmedata.fmt
examples/Ag_ready/skies_bands/: Kpath  bands.sh  dos.sh  trdos.sh
examples/Ag_ready/skies_phonons/: epw.skies.in  phdos.sh
examples/Ag_ready/skies_transport_general/: a2f_mm_16_8_gen_0.025_0.7.sh  a2f_pp_16_8_gen_0.025_0.7.sh  thermal_cond_gen.sh
examples/Ag_ready/skies_transport_lowT/: a2f_mm_16_8_lowT.sh  a2f_pp_16_8_lowT.sh  resist_lowT.sh  thermal_cond_lowT.sh
examples/Pd_not_ready/: README.md  epw.in  nscf.in  ph.in  pp.py  relax.in  relax.sh  run_qe.sh  scf.in
examples/Pd_ready/: README.md  crystal.fmt  epwdata.fmt  vmedata.fmt
examples/Pd_ready/skies_bands/: bands.sh  dos.sh  trdos.sh
examples/Pd_ready/skies_phonons/: branches.sh
examples/Pd_ready/skies_transport_general/: a2f_mm_16_8_gen_0.025_0.7.sh  a2f_pp_16_8_gen_0.025_0.7.sh  resist_gen.sh
examples/Pd_ready/skies_transport_lowT/: a2f_mm_16_8_lowT.sh  a2f_pp_16_8_lowT.sh  epw.skies.in
gui/: CMakeLists.txt  app_main.cpp
gui/src/: crystal_gl_widget.cpp  crystal_gl_widget.h  crystal_structure.cpp  crystal_structure.h  crystal_viewer_dialog.cpp  crystal_viewer_dialog.h  editor_dock_widget.cpp  editor_dock_widget.h  gl_widget.cpp  gl_widget.h  opengl_widget.cpp  opengl_widget.h  window.cpp  window.h
launch/: CMakeLists.txt  commands.cpp  commands.h  parser.cpp  parser.h  skies.cpp  timer.h  types.h
qe-patches/: epw_readin.patch  io_epw.patch  wan2bloch.patch
skies/: CMakeLists.txt
skies/common/: CMakeLists.txt  alg.cpp  alg.h  ndimarrays.h  units.h
skies/interpolation/: CMakeLists.txt
skies/interpolation/epw_interface/: CMakeLists.txt  epi_init.f90  epi_interpol.f90
skies/lattices/: CMakeLists.txt  decompose.cpp  decompose.h  kp_protocol.cpp  kp_protocol.h  latt_protocol.cpp  latt_protocol.h
skies/quantities/: CMakeLists.txt  basic_quantity.h  dos.cpp  dos.h  eigenfreqs.cpp  eigenfreqs.h  eigenvals.cpp  eigenvals.h  elvelocs.cpp  elvelocs.h  gmatrix.cpp  gmatrix.h  highSymPath.h
skies/sampling/: CMakeLists.txt  sampling.cpp  sampling.h  tetrahedra.cpp  tetrahedra.h
skies/spectral/: CMakeLists.txt  lambda.cpp  lambda.h  spec_func.cpp  spec_func.h
skies/transport/: CMakeLists.txt  elastic.cpp  elastic.h  inelastic.cpp  inelastic.h  iohandler.cpp  iohandler.h
skies/utils/: CMakeLists.txt  mpi_wrapper.cpp  mpi_wrapper.h  tbb_wrapper.h
tests/: CMakeLists.txt  customSplitTest.cpp  kpProtocolTest.cpp  mpiDecompTest.cpp  ndimarrayTest.cpp  solveEqBisectTest.cpp
